refactor: split a2a-message-context into steps with targeted catch blocks
Break the monolithic test into 4 logical steps:
- setup-mock-llm: catches A2AServer failures
- test-first-query: catches first Query failures
- extract-context-id: catches contextId extraction failures
- test-second-query-with-context: catches second Query failures

This ensures failed steps describe the actual failing resource rather than
attempting to describe resources that were never created due to earlier
failures.

--- a/tests/a2a-message-context/chainsaw-test.yaml
+++ b/tests/a2a-message-context/chainsaw-test.yaml
@@ -5,9 +5,8 @@ metadata:
 spec:
   description: Test A2A contextId annotation for stateful conversations
   steps:
-  - name: step-1
+  - name: setup-mock-llm
     try:
-    # Install mock-llm with A2A agents enabled
     - script:
         content: |
           helm install mock-llm oci://ghcr.io/dwmkerr/charts/mock-llm \
@@ -17,14 +16,12 @@ spec:
         env:
         - name: NAMESPACE
           value: ($namespace)
-    # Install ark-tenant for RBAC
     - script:
         content: |
           helm install ark-tenant ../../charts/ark-tenant --namespace $NAMESPACE --create-namespace --wait
         env:
         - name: NAMESPACE
           value: ($namespace)
-    # Wait for message-counter A2AServer to be Ready
     - assert:
         resource:
           apiVersion: ark.mckinsey.com/v1prealpha1
@@ -33,10 +30,17 @@ spec:
             name: mock-llm-message-counter
           status:
             (contains(conditions[?type == 'Ready'].status, 'True')): true
-    # Send first query
+    catch:
+    - events: {}
+    - describe:
+        apiVersion: ark.mckinsey.com/v1prealpha1
+        kind: A2AServer
+        name: mock-llm-message-counter
+
+  - name: test-first-query
+    try:
     - apply:
         file: manifests/a01-query-first.yaml
-    # Wait for first query to complete
     - assert:
         resource:
           apiVersion: ark.mckinsey.com/v1alpha1
@@ -46,7 +50,6 @@ spec:
           status:
             (conditions[?type == 'Completed']):
             - status: 'True'
-    # Verify first response shows 1 message (terminal state, fast check)
     - assert:
         timeout: 1s
         resource:
@@ -57,7 +60,15 @@ spec:
           status:
             (length(responses)): 1
             (contains(responses[0].content, '1 message(s) received')): true
-    # Verify A2A servers always set contextId in response and extract it
+    catch:
+    - events: {}
+    - describe:
+        apiVersion: ark.mckinsey.com/v1alpha1
+        kind: Query
+        name: message-counter-first
+
+  - name: extract-context-id
+    try:
     - script:
         content: |
           echo "=== Query Response Structure ==="
@@ -77,7 +88,15 @@ spec:
         outputs:
         - name: contextId
           value: ($stdout)
-    # Create second query with contextId annotation
+    catch:
+    - events: {}
+    - describe:
+        apiVersion: ark.mckinsey.com/v1alpha1
+        kind: Query
+        name: message-counter-first
+
+  - name: test-second-query-with-context
+    try:
     - apply:
         resource:
           apiVersion: ark.mckinsey.com/v1alpha1
@@ -91,7 +110,6 @@ spec:
             targets:
               - type: agent
                 name: message-counter-agent
-    # Wait for second query to complete
     - assert:
         resource:
           apiVersion: ark.mckinsey.com/v1alpha1
@@ -101,7 +119,6 @@ spec:
           status:
             (conditions[?type == 'Completed']):
             - status: 'True'
-    # Debug: show actual response content
     - script:
         content: |
           echo "=== Second Query Response ==="
@@ -113,7 +130,6 @@ spec:
         env:
         - name: NAMESPACE
           value: ($namespace)
-    # Verify second response shows 2 messages (terminal state, fast check)
     - assert:
         timeout: 1s
         resource:
@@ -126,14 +142,6 @@ spec:
             (contains(responses[0].content, '2 message(s) received')): true
     catch:
     - events: {}
-    - describe:
-        apiVersion: ark.mckinsey.com/v1prealpha1
-        kind: A2AServer
-        name: mock-llm-message-counter
-    - describe:
-        apiVersion: ark.mckinsey.com/v1alpha1
-        kind: Query
-        name: message-counter-first
     - describe:
         apiVersion: ark.mckinsey.com/v1alpha1
         kind: Query
