--- a/tests/agent-structured-output/chainsaw-test.yaml
+++ b/tests/agent-structured-output/chainsaw-test.yaml
@@ -2,6 +2,8 @@ apiVersion: chainsaw.kyverno.io/v1alpha1
 kind: Test
 metadata:
   name: agent-structured-output
+  labels:
+    multi-provider: "true"
 spec:
   description: Test agent structured output with JSON schema
   timeouts:
