--- a/tests/agent-tools/chainsaw-test.yaml
+++ b/tests/agent-tools/chainsaw-test.yaml
@@ -2,6 +2,8 @@ apiVersion: chainsaw.kyverno.io/v1alpha1
 kind: Test
 metadata:
   name: agent-tools
+  labels:
+    multi-provider: "true"
 spec:
   description: Test agent with weather tool functionality
   steps:
