--- a/tests/models/chainsaw-test.yaml
+++ b/tests/models/chainsaw-test.yaml
@@ -2,6 +2,8 @@ apiVersion: chainsaw.kyverno.io/v1alpha1
 kind: Test
 metadata:
   name: models
+  labels:
+    multi-provider: "true"
 spec:
   steps:
     - name: setup-and-test
