--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -392,6 +392,14 @@ jobs:
           echo "ARK_QUICKSTART_API_VERSION=$ARK_QUICKSTART_API_VERSION"
           echo "ARK_QUICKSTART_API_KEY=***"
           make quickstart-force
+            - name: Wait for ARK components to be ready
+        run: |
+          echo "Waiting for ARK controller to be ready..."
+          kubectl -n ark-system wait --for=condition=available --timeout=300s deployment/ark-controller
+          echo "Waiting for webhook service to be ready..."
+          kubectl -n ark-system wait --for=condition=ready pod -l control-plane=ark-controller --timeout=120s
+          echo "Giving webhook service additional time to initialize..."
+          sleep 10
       - name: Test end-to-end query
         run: |
           # Test the soon-to-be-deprecated query script (still used in quickstart).
