--- a/services/ark-api/devspace.yaml
+++ b/services/ark-api/devspace.yaml
@@ -1,6 +1,21 @@
 # DevSpace configuration for ark-api service
 version: v2beta1
 
+# Environment variables - defaults to local Keycloak, can be overridden
+vars:
+  AUTH_MODE:
+    source: env
+    default: "sso"
+  OIDC_ISSUER_URL:
+    source: env
+    default: "http://host.docker.internal:8090/realms/ark-test"
+  OIDC_APPLICATION_ID:
+    source: env
+    default: "ark-api"
+  CORS_ORIGINS:
+    source: env
+    default: "http://localhost:3000"
+
 images:
   ark-api:
     image: ark-api
@@ -42,6 +57,15 @@ deployments:
             requests:
               memory: "256Mi"
               cpu: "200m"
+          env:
+            - name: AUTH_MODE
+              value: ${vars.AUTH_MODE}
+            - name: OIDC_ISSUER_URL
+              value: ${vars.OIDC_ISSUER_URL}
+            - name: OIDC_APPLICATION_ID
+              value: ${vars.OIDC_APPLICATION_ID}
+            - name: CORS_ORIGINS
+              value: ${vars.CORS_ORIGINS}
         httpRoute:
           enabled: true
 
@@ -49,6 +73,15 @@ dev:
   ark-api:
     imageSelector: ark-api
     devImage: python:3.12-slim
+    env:
+      - name: AUTH_MODE
+        value: "sso"
+      - name: OIDC_ISSUER_URL
+        value: "http://192.168.100.3:8090/realms/ark-test"
+      - name: OIDC_APPLICATION_ID
+        value: "ark-api"
+      - name: CORS_ORIGINS
+        value: "http://localhost:3000"
     # Install dependencies and start API server with hot reload
     command:
       [
