feat: add session-id support to ark query command [ARKQB-490] (#455)
## Checklist

- [ ] Follow the [contributor guide](./CONTRIBUTING.md)
- [ ] End-to-end tests pass
- [ ] Unit tests for essential parts of your code, e.g. APIs exposed via
SDKs or endpoints
- [ ] Update `./docs`
- [ ] Recognize contributors with "@all-contributors please add <person>
for <code, bug, docs, etc>"
- [ ] Linked issues #eg101

--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,6 @@ services/ark-dashboard/ark-dashboard/lib/api/generated/openapi.json
 
 # Helm chart dependencies
 **/charts/*.tgz
+
+# Personal/local artifacts and experimental files
+vibe_artifacts/
