--- a/services/ark-api/devspace.yaml
+++ b/services/ark-api/devspace.yaml
@@ -1,20 +1,19 @@
 # DevSpace configuration for ark-api service
 version: v2beta1
 
-# Environment variables - defaults to local Keycloak, can be overridden
 vars:
   AUTH_MODE:
     source: env
     default: "sso"
   OIDC_ISSUER_URL:
     source: env
-    default: "http://localhost:8090/realms/ark-test"
+    default: ""
   OIDC_APPLICATION_ID:
     source: env
-    default: "ark-api"
+    default: ""
   CORS_ORIGINS:
     source: env
-    default: "http://localhost:3000"
+    default: ""
 
 images:
   ark-api:
@@ -77,11 +76,11 @@ dev:
       - name: AUTH_MODE
         value: "sso"
       - name: OIDC_ISSUER_URL
-        value: "http://192.168.100.3:8090/realms/ark-test"
+        value: "http://keycloak.default.127.0.0.1.nip.io:8080/realms/ark-test"
       - name: OIDC_APPLICATION_ID
         value: "ark-api"
       - name: CORS_ORIGINS
-        value: "http://localhost:3000"
+        value: "http://dashboard.default.127.0.0.1.nip.io:8080"
     # Install dependencies and start API server with hot reload
     command:
       [
