--- a/services/ark-dashboard/devspace.yaml
+++ b/services/ark-dashboard/devspace.yaml
@@ -1,44 +1,43 @@
 # DevSpace configuration for ark-dashboard service
 version: v2beta1
 
-# Environment variables - defaults to local Keycloak, can be overridden
 vars:
   AUTH_MODE:
     source: env
     default: "sso"
   BASE_URL:
     source: env
-    default: "http://localhost:3000"
+    default: ""
   AUTH_URL:
     source: env
-    default: "http://localhost:3000/api/auth"
+    default: ""
   NEXT_PUBLIC_BASE_URL:
     source: env
-    default: "http://localhost:3000"
+    default: ""
   NEXTAUTH_URL:
     source: env
-    default: "http://localhost:3000/api/auth"
+    default: ""
   AUTH_SECRET:
     source: env
-    default: "dev-secret-key-for-local-testing-only-min-32-chars"
+    default: ""
   OIDC_ISSUER_URL:
     source: env
-    default: "http://localhost:8090/realms/ark-test"
+    default: ""
   OIDC_CLIENT_ID:
     source: env
-    default: "ark-dashboard"
+    default: ""
   OIDC_CLIENT_SECRET:
     source: env
     default: ""
   OIDC_PROVIDER_NAME:
     source: env
-    default: "Local Keycloak"
+    default: ""
   OIDC_PROVIDER_ID:
     source: env
-    default: "mid"
+    default: ""
   SESSION_MAX_AGE:
     source: env
-    default: "1800"
+    default: ""
 
 images:
   ark-dashboard:
@@ -109,13 +108,13 @@ dev:
       - name: NODE_ENV
         value: development
       - name: BASE_URL
-        value: "http://localhost:3000"
+        value: "http://dashboard.default.127.0.0.1.nip.io:8080"
       - name: AUTH_URL
-        value: "http://localhost:3000/api/auth"
+        value: "http://dashboard.default.127.0.0.1.nip.io:8080/api/auth"
       - name: AUTH_SECRET
         value: "dev-secret-key-for-local-testing-only-min-32-chars"
       - name: OIDC_ISSUER_URL
-        value: "http://192.168.100.3:8090/realms/ark-test"
+        value: "http://keycloak.default.127.0.0.1.nip.io:8080/realms/ark-test"
       - name: OIDC_CLIENT_ID
         value: "ark-dashboard"
       - name: OIDC_CLIENT_SECRET
@@ -129,9 +128,9 @@ dev:
       - name: AUTH_MODE
         value: "sso"
       - name: NEXT_PUBLIC_BASE_URL
-        value: "http://localhost:3000"
+        value: "http://dashboard.default.127.0.0.1.nip.io:8080"
       - name: NEXTAUTH_URL
-        value: "http://localhost:3000/api/auth"
+        value: "http://dashboard.default.127.0.0.1.nip.io:8080/api/auth"
     command:
       [
         "sh",
