--- a/ark/devspace.yaml
+++ b/ark/devspace.yaml
@@ -45,7 +45,7 @@ dev:
     imageSelector: ark-controller
     devImage: golang:1.24-bookworm
     command:
-      ["sh", "-c", "cd /app && go run cmd/main.go --leader-elect=false"]
+      ["sh", "-c", "cd /app && go run cmd/main.go --leader-elect=false --zap-log-level=info"]
     namespace: ark-system
     logs:
       lastLines: 50
