Revert "revert: fix(prometheus): secure ServiceMonitor TLS by removing insecureSkipVerify (#508)"
This reverts commit f41da43223cb480e927be645ac20f07b75fac8b7.

--- a/ark/config/certmanager/certificate-metrics.yaml
+++ b/ark/config/certmanager/certificate-metrics.yaml
@@ -12,10 +12,11 @@ spec:
   privateKey:
     rotationPolicy: Always
   dnsNames:
-  # SERVICE_NAME and SERVICE_NAMESPACE will be substituted by kustomize
-  # replacements in the config/default/kustomization.yaml file.
-  - SERVICE_NAME.SERVICE_NAMESPACE.svc
-  - SERVICE_NAME.SERVICE_NAMESPACE.svc.cluster.local
+  # These DNS names must match the serverName in the Prometheus ServiceMonitor
+  # (config/prometheus/monitor.yaml) to ensure TLS verification succeeds.
+  # The namespace 'ark-system' is set by the kustomization.yaml namespace field.
+  - ark.ark-system.svc
+  - ark.ark-system.svc.cluster.local
   issuerRef:
     kind: Issuer
     name: selfsigned-issuer
