--- a/ark/config/prometheus/monitor_tls_patch.yaml
+++ b/ark/config/prometheus/monitor_tls_patch.yaml
@@ -1,10 +1,12 @@
 # Patch for Prometheus ServiceMonitor to enable secure TLS configuration
-# using certificates managed by cert-manager
+# using certificates managed by cert-manager.
+# This patch can be used to override the default TLS configuration if needed.
 - op: replace
   path: /spec/endpoints/0/tlsConfig
   value:
-    # SERVICE_NAME and SERVICE_NAMESPACE will be substituted by kustomize
-    serverName: SERVICE_NAME.SERVICE_NAMESPACE.svc
+    # serverName must match one of the DNS names in the metrics certificate
+    # Update this if your certificate uses a different service name
+    serverName: ark.ark-system.svc
     insecureSkipVerify: false
     ca:
       secret:
