--- a/tests/prometheus-tls-config/manifests/service-monitor.yaml
+++ b/tests/prometheus-tls-config/manifests/service-monitor.yaml
@@ -1,13 +1,12 @@
-# To integrate with Prometheus.
-{{- if .Values.prometheus.enable }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    {{- include "chart.labels" . | nindent 4 }}
     control-plane: ark-controller
-  name: ark-controller-manager-metrics-monitor
-  namespace: {{ .Release.Namespace }}
+    app.kubernetes.io/name: ark
+    app.kubernetes.io/managed-by: kustomize
+  name: ark-controller-metrics-monitor
+  namespace: ark-system
 spec:
   endpoints:
     - path: /metrics
@@ -15,9 +14,7 @@ spec:
       scheme: https
       bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
       tlsConfig:
-        {{- if .Values.certmanager.enable }}
-        serverName: ark-controller-manager-metrics-service.{{ .Release.Namespace }}.svc
-        # Apply secure TLS configuration with cert-manager
+        serverName: ark.ark-system.svc
         insecureSkipVerify: false
         ca:
           secret:
@@ -30,11 +27,8 @@ spec:
         keySecret:
           name: metrics-server-cert
           key: tls.key
-        {{- else }}
-        # Secure TLS configuration (self-signed certificates)
-        insecureSkipVerify: false
-        {{- end }}
   selector:
     matchLabels:
       control-plane: ark-controller
-{{- end }}
+      app.kubernetes.io/name: ark
+
