ci: replace e2e-tests-multi-provider with matrix-based e2e-tests-llm
- Add e2e-tests-llm job with matrix for azure-gpt-41 and openai-gpt-4o
- Matrix runs tests against each model in parallel
- All secrets passed at job level, MODEL env var selects which model
- Update e2e-tests-standard to exclude llm tests (selector: !llm)
- Remove chainsaw-multi script dependency - use native chainsaw + matrix

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -591,7 +591,7 @@ jobs:
           MAX_RETRIES=3
           RETRY_DELAY=30
           for ((attempt=1; attempt<=$MAX_RETRIES; attempt++)); do
-            if chainsaw test --config .chainsaw.yaml --selector '!evaluated,!multi-provider'; then
+            if chainsaw test --config .chainsaw.yaml --selector '!evaluated,!llm'; then
               exit 0
             fi
             if [ $attempt -lt $MAX_RETRIES ]; then
@@ -658,10 +658,13 @@ jobs:
         with:
           artifact-name: coverage-reports-evaluated
     
-  e2e-tests-multi-provider:
+  e2e-tests-llm:
     needs: [setup-container-cache-registry, build-containers]
     runs-on: ubuntu-24.04
     if: ${{ needs.setup-container-cache-registry.outputs.is-fork-pr == 'false' }}
+    strategy:
+      matrix:
+        model: [azure-gpt-41, openai-gpt-4o]
     steps:
       - uses: actions/checkout@v4
 
@@ -674,16 +677,16 @@ jobs:
           ci-cache-registry-username: ${{ secrets.DOCKER_CICD_CACHE_REGISTRY_USERNAME || github.actor }}
           ci-cache-registry-password: ${{ secrets.DOCKER_CICD_CACHE_REGISTRY_PASSWORD || secrets.GITHUB_TOKEN }}
 
-      - name: Install chainsaw and jq
+      - name: Install chainsaw
         run: |
           curl -s -L "https://github.com/kyverno/chainsaw/releases/download/v0.2.12/chainsaw_linux_amd64.tar.gz" | \
             tar xz -C /tmp
           sudo mv /tmp/chainsaw /usr/local/bin/chainsaw
           sudo chmod +x /usr/local/bin/chainsaw
-          sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Run multi-provider E2E tests
+      - name: Run LLM tests with ${{ matrix.model }}
         env:
+          MODEL: ${{ matrix.model }}
           E2E_TEST_AZURE_OPENAI_KEY: ${{ secrets.CICD_AZURE_OPENAI_KEY }}
           E2E_TEST_AZURE_OPENAI_BASE_URL: ${{ secrets.CICD_AZURE_OPENAI_BASE_URL }}
           E2E_TEST_AZURE_OPENAI_API_VERSION: ${{ secrets.CICD_AZURE_OPENAI_API_VERSION || '2024-12-01-preview' }}
@@ -697,12 +700,12 @@ jobs:
           ARK_CLUSTER_MEMORY_IMAGE_TAG: ${{ github.sha }}
         run: |
           cd tests
-          chmod +x chainsaw-multi
-          ./chainsaw-multi
+          mkdir -p /tmp/chainsaw-report
+          chainsaw test llm-tests/ --config .chainsaw.yaml
 
       - uses: ./.github/actions/collect-coverage-e2e
         with:
-          artifact-name: coverage-reports-multi-provider
+          artifact-name: coverage-reports-llm-${{ matrix.model }}
 
   build-charts:
     runs-on: ubuntu-24.04
