--- a/tests/llm-tests/agent-tools/chainsaw-test.yaml
+++ b/tests/llm-tests/agent-tools/chainsaw-test.yaml
@@ -44,6 +44,14 @@ spec:
                 name: weather-query
               status:
                 phase: done
+        - assert:
+            resource:
+              apiVersion: ark.mckinsey.com/v1alpha1
+              kind: Query
+              metadata:
+                name: weather-query
+              status:
+                (responses != null): true
                 (length(responses) > `0`): true
       catch:
         - events: {}
