--- a/tests/llm-tests/agent-structured-output/chainsaw-test.yaml
+++ b/tests/llm-tests/agent-structured-output/chainsaw-test.yaml
@@ -42,6 +42,14 @@ spec:
                 name: structured-output-test-query
               status:
                 phase: done
+        - assert:
+            resource:
+              apiVersion: ark.mckinsey.com/v1alpha1
+              kind: Query
+              metadata:
+                name: structured-output-test-query
+              status:
+                (responses != null): true
                 (length(responses) > `0`): true
       catch:
         - events: {}
