--- a/tests/llm-tests/queries/chainsaw-test.yaml
+++ b/tests/llm-tests/queries/chainsaw-test.yaml
@@ -42,6 +42,14 @@ spec:
                 name: test-query
               status:
                 phase: done
+        - assert:
+            resource:
+              apiVersion: ark.mckinsey.com/v1alpha1
+              kind: Query
+              metadata:
+                name: test-query
+              status:
+                (responses != null): true
                 (length(responses) > `0`): true
                 (length(responses[0].content) > `10`): true
       catch:
