--- a/tests/llm-tests/agent-partial-tool/manifests/query.yaml
+++ b/tests/llm-tests/agent-partial-tool/manifests/query.yaml
@@ -4,6 +4,7 @@ metadata:
   name: partial-tool-query
 spec:
   input: What are the coordinates?
+  timeout: 2m
   targets:
     - type: agent
       name: partial-tool-agent
