--- a/services/clickhouse/chart/values.yaml
+++ b/services/clickhouse/chart/values.yaml
@@ -36,9 +36,9 @@ replicaCount: 1
 
 env:
   CLICKHOUSE_USER: default
-  CLICKHOUSE_PASSWORD: ""
+  CLICKHOUSE_PASSWORD: "clickhouse"
   CLICKHOUSE_DB: default
-  CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: "0"
+  CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: "1"
 
 persistence:
   enabled: true
