--- a/services/otel-collector/chart/values.yaml
+++ b/services/otel-collector/chart/values.yaml
@@ -39,6 +39,18 @@ opentelemetry-collector:
         verbosity: detailed
         sampling_initial: 5
         sampling_thereafter: 200
+      clickhouse:
+        endpoint: tcp://clickhouse-svc.clickhouse.svc.cluster.local:9000?dial_timeout=10s
+        username: default
+        password: "clickhouse"
+        database: otel
+        async_insert: true
+        ttl: 72h
+        compress: lz4
+        create_schema: true
+        logs_table_name: otel_logs
+        traces_table_name: otel_traces
+        timeout: 5s
 
     extensions:
       health_check:
@@ -79,6 +91,7 @@ opentelemetry-collector:
             - batch
           exporters:
             - debug
+            - clickhouse
         metrics:
           receivers:
             - otlp
@@ -87,6 +100,7 @@ opentelemetry-collector:
             - batch
           exporters:
             - debug
+            - clickhouse
         logs:
           receivers:
             - otlp
@@ -95,6 +109,7 @@ opentelemetry-collector:
             - batch
           exporters:
             - debug
+            - clickhouse
 
   resources:
     limits:
