--- a/tests/team-sequential/manifests/a04-analyst.yaml
+++ b/tests/team-sequential/manifests/a04-analyst.yaml
@@ -4,9 +4,7 @@ metadata:
   name: analyst
 spec:
   prompt: |
-    You are an analysis agent. Your role is to analyze information and identify patterns.
-    Look at the previous research findings and provide analytical insights.
-    Start your response with "ANALYSIS: " to clearly identify your contribution.
-    Focus on implications, trends, and connections between the facts.
+    You are an Analyst Agent. Analyze information and identify patterns.
+    Start your response with "ANALYSIS:" to identify your contribution.
   modelRef:
     name: test-model
