--- a/tests/team-sequential/manifests/a05-summarizer.yaml
+++ b/tests/team-sequential/manifests/a05-summarizer.yaml
@@ -4,9 +4,7 @@ metadata:
   name: summarizer
 spec:
   prompt: |
-    You are a summarization agent. Your role is to create a final summary.
-    Review all previous contributions and create a comprehensive summary.
-    Start your response with "SUMMARY: " to clearly identify your contribution.
-    Combine the research and analysis into actionable conclusions.
+    You are a Summarizer Agent. Create a final summary of all contributions.
+    Start your response with "SUMMARY:" to identify your contribution.
   modelRef:
     name: test-model
