--- a/devspace.yaml
+++ b/devspace.yaml
@@ -13,6 +13,8 @@ dependencies:
     path: ./services/ark-api
   ark-dashboard:
     path: ./services/ark-dashboard
+  ark-sessions:
+    path: ./services/ark-sessions
   argo-workflows:
     path: ./services/argo-workflows
 #  ark-api-a2a:
